// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/x-request/demo/basic.tsx correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-start"
  style="column-gap:16px;row-gap:16px"
>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        Request - https://api.example.com/chat
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-thought-chain ant-thought-chain-middle"
    >
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            <span
              aria-label="tags"
              class="anticon anticon-tags"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="tags"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 000 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1067.88-67.89 48 48 0 10-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 00-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 00-11.3 0l-39.6 39.5a8.03 8.03 0 000 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Request Log
              </strong>
            </span>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-content"
        >
          <div
            class="ant-thought-chain-item-content-box"
          >
            <div
              class="ant-descriptions"
            >
              <div
                class="ant-descriptions-view"
              >
                <table>
                  <tbody>
                    <tr
                      class="ant-descriptions-row"
                    >
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            Status
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            -
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-descriptions-row"
                    >
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            Update Times
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            0
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/x-request/demo/custom-transformer.tsx correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-start"
  style="column-gap:16px;row-gap:16px"
>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        Request - https://api.example.host/chat
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-thought-chain ant-thought-chain-middle"
    >
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            <span
              aria-label="tags"
              class="anticon anticon-tags"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="tags"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 000 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1067.88-67.89 48 48 0 10-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 00-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 00-11.3 0l-39.6 39.5a8.03 8.03 0 000 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Mock Custom Protocol - Log
              </strong>
            </span>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-content"
        >
          <div
            class="ant-thought-chain-item-content-box"
          >
            <pre
              style="overflow:scroll"
            >
              <code />
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
